Add pick and ban page

--- a/main/wardhop/templates/pickban.html
+++ b/main/wardhop/templates/pickban.html
@@ -1,4 +1,4 @@
-<!--templates/base.html-->
+<!--templates/pickban.html-->
 
 <h1>Draft</h1>
 
@@ -8,6 +8,8 @@
     <input type="submit" value="submit" />
 </form>
 {% for image in images %}
-    <div style="display:inline-block"><img src="{{ image }}" height='100px' width='100px' style='padding-right: 6px'/></div>
+    <div style="display:inline-block">
+        <img src="{{ image }}" height='100px' width='100px' style='padding-right: 6px'/>
+    </div>
 {% endfor %}
 {% endblock %}
