--- a/main/wardhop/templates/base.html
+++ b/main/wardhop/templates/base.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <form action="{% url 'search_results' %}" method="get">
-    <input name="champion" type="text" placeholder="Champ...">
-    <input type="submit" value="submit" />
+    <!-- <input name="champion" type="text" placeholder="Champ..."> -->
+    <input type="submit" value="Create draft" />
 </form>
 {% for image in images %}
     <div style="display:inline-block"><img src="{{ image }}" height='100px' width='100px' style='padding-right: 6px'/></div>
