--- a/main/wardhop/templates/draft.html
+++ b/main/wardhop/templates/draft.html
@@ -3,7 +3,7 @@
 <h1>Draft</h1>
 
 {% block content %}
-<form action="{% url 'pick_ban' %}" method="get">
+<form action="{% url 'pick_ban' %}" method="post">{% csrf_token %}
     <input name="champion" type="text" placeholder="Champ...">
     <input type="submit" value="submit" />
 </form>
