--- a/main/wardhop/templates/pickban.html
+++ b/main/wardhop/templates/pickban.html
@@ -2,7 +2,7 @@
 
 <h1>Draft</h1>
 {% block content %}
-<form action="{% url 'pick_ban' %}" method="get">
+<form action="{% url 'pick_ban' %}{{ lobby }}" method="post">{% csrf_token %}
     <input name="champion" type="text" placeholder="Champ...">
     <input type="submit" value="Enter" />
 </form>
@@ -41,7 +41,7 @@
     <td><div style="display:inline-block"><img src="{{ red5 }}" height='100px' width='100px' style='padding-right: 6px'/></div></td>
 </tr>
 </table>
-<form action="{% url 'pick_ban' %}" method="get">
+<form action="{% url 'pick_ban' %}{{ lobby }}" method="post">{% csrf_token %}
     <input name="clean" type="submit" value="Clean cookies" />
 </form>
 
