Change display on button

--- a/main/wardhop/templates/pickban.html
+++ b/main/wardhop/templates/pickban.html
@@ -42,7 +42,7 @@
 </tr>
 </table>
 <form action="{% url 'pick_ban' %}{{ lobby }}" method="post">{% csrf_token %}
-    <input name="clean" type="submit" value="Clean cookies" />
+    <input name="clean" type="submit" value="New draft" />
 </form>
 
 {% endblock %}
