--- a/main/wardhop/templates/errors.html
+++ b/main/wardhop/templates/errors.html
@@ -1,4 +1,17 @@
-<h1>Error 404</h1>
-{% block content %}
-<p>Champion not found.</p>
-{% endblock %}
+<!--templates/errors.html-->
+
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Draft</title>
+</head>
+
+<body>
+    <h1>Error 404</h1>
+    {% block content %}
+    <p>Page not found.</p>
+    {% endblock %}
+</body>
+
+</html>
