--- a/main/wardhop/templates/base.html
+++ b/main/wardhop/templates/base.html
@@ -1,13 +1,25 @@
 <!--templates/base.html-->
 
-<h1>Draft</h1>
+<!DOCTYPE html>
+<html>
 
-{% block content %}
-<form action="{% url 'pick_ban' %}{{ lobby }}" method="post">{% csrf_token %}
-    <!-- <input name="champion" type="text" placeholder="Champ..."> -->
-    <input type="submit" value="Create draft" />
-</form>
-{% for image in images %}
-    <div style="display:inline-block"><img src="{{ image }}" height='100px' width='100px' style='padding-right: 6px'/></div>
-{% endfor %}
-{% endblock %}
+<head>
+    <title>Draft</title>
+</head>
+
+<body>
+    <h1>Draft</h1>
+
+    {% block content %}
+    <form action="{% url 'pick_ban' %}{{ lobby }}" method="post">{% csrf_token %}
+        <!-- <input name="champion" type="text" placeholder="Champ..."> -->
+        <input type="submit" value="Create draft" />
+    </form>
+    {% for image in images %}
+    <div style="display:inline-block"><img src="{{ image }}" height='100px' width='100px' style='padding-right: 6px' />
+    </div>
+    {% endfor %}
+    {% endblock %}
+</body>
+
+</html>
