--- a/main/wardhop/templates/base.html
+++ b/main/wardhop/templates/base.html
@@ -1,10 +1,12 @@
 <!--templates/base.html-->
 
 <!DOCTYPE html>
+{% load static %}
 <html>
 
 <head>
     <title>Draft</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 </head>
 
 <body>
