--- a/main/wardhop/templates/pickban.html
+++ b/main/wardhop/templates/pickban.html
@@ -1,11 +1,12 @@
 <!--templates/draft.html-->
 
 <!DOCTYPE html>
-
+{% load static %}
 <html>
 
 <head>
     <title>Draft</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 </head>
 
 <body>
@@ -18,86 +19,86 @@
         <input type="submit" value="Enter" />
     </form>
     <p><strong>{{ error }}</strong></p>
-    <table style="display:inline-block">
+    <table>
         <tr>
             <th>Blue</th>
         </tr>
-        <tr style="display:inline-block">
+        <tr>
             {% for image in blue_ban %}
             <td>
-                <div style="display:inline-block"><img src="{{ image }}" height='20px' width='20px' /></div>
+                <div><img src="{{ image }}" height='20px' width='20px' /></div>
             </td>
             {% endfor %}
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ blue1 }}" height='100px' width='100px'
+                <div><img src="{{ blue1 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         <tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ blue2 }}" height='100px' width='100px'
-                        style='padding-right: 6px' /></div>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <div style="display:inline-block"><img src="{{ blue3 }}" height='100px' width='100px'
+                <div><img src="{{ blue2 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ blue4 }}" height='100px' width='100px'
+                <div><img src="{{ blue3 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ blue5 }}" height='100px' width='100px'
+                <div><img src="{{ blue4 }}" height='100px' width='100px'
+                        style='padding-right: 6px' /></div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <div><img src="{{ blue5 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
     </table>
-    <table style="display:inline-block">
+    <table>
         <tr>
             <th>Red</th>
         </tr>
-        <tr style="display:inline-block">
+        <tr>
             {% for image in red_ban %}
             <td>
-                <div style="display:inline-block"><img src="{{ image }}" height='20px' width='20px' /></div>
+                <div><img src="{{ image }}" height='20px' width='20px' /></div>
             </td>
             {% endfor %}
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ red1 }}" height='100px' width='100px'
+                <div><img src="{{ red1 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ red2 }}" height='100px' width='100px'
+                <div><img src="{{ red2 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ red3 }}" height='100px' width='100px'
+                <div><img src="{{ red3 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ red4 }}" height='100px' width='100px'
+                <div><img src="{{ red4 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
         <tr>
             <td>
-                <div style="display:inline-block"><img src="{{ red5 }}" height='100px' width='100px'
+                <div><img src="{{ red5 }}" height='100px' width='100px'
                         style='padding-right: 6px' /></div>
             </td>
         </tr>
