--- a/main/wardhop/templates/errors.html
+++ b/main/wardhop/templates/errors.html
@@ -7,6 +7,7 @@
 <head>
     <title>Draft</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 </head>
 
 <body>
