Add padding instead of &nbsp;

--- a/main/wardhop/templates/pickban.html
+++ b/main/wardhop/templates/pickban.html
@@ -25,8 +25,7 @@
     <script type="text/javascript" src="{% static 'js/autocomplete.min.js' %}"></script>
     <p><strong>{{ error }}</strong></p>
     <table>
-        <th>Blue&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        </th>
+        <th style="padding-right: 59px;">Blue</th>
         <th>Red</th>
         <tr>
             {% for image in blue_ban %}
