--- a/main/wardhop/templates/errors.html
+++ b/main/wardhop/templates/errors.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <h1>Error 404</h1>
+    <h1><a href="/">Draft</a></h1>
+    <h2>Error 404</h2>
     {% block content %}
     <p>Page not found.</p>
     {% endblock %}
