--- a/main/wardhop/templates/errors.html
+++ b/main/wardhop/templates/errors.html
@@ -7,7 +7,7 @@
 <head>
     <title>Draft</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
 </head>
 
 <body>
@@ -17,5 +17,6 @@
     <p>Page not found.</p>
     {% endblock %}
 </body>
+<footer><em>Copyright © 2020. All right reserved.</em></footer>
 
 </html>
