Add more verbose messages for user experience

--- a/main/wardhop/templates/pickban.html
+++ b/main/wardhop/templates/pickban.html
@@ -13,7 +13,7 @@
 
 <script type="text/javascript">
     function alert_back() {
-        var answer = confirm("Discard draft and continue?")
+        var answer = confirm("Discard draft and continue to home screen?")
         if (answer)
             window.location = "/";
     }
